fixed alignment on headers, changed shaddow and outline color for lists

--- a/assets/style.css
+++ b/assets/style.css
@@ -35,6 +35,6 @@ p {
   .card {
     width: 80%;
     margin: 40px auto;
-    border: 5px solid rgb(25, 108, 28);
-    box-shadow: 5px 10px #A533FF;
+    border: 5px solid rgb(137, 67, 143);
+    box-shadow: 5px 10px #4a3758;
   }
